--- a/src/views/editor.ejs
+++ b/src/views/editor.ejs
@@ -15,6 +15,14 @@
   </header>
   <div class="container">
     <section class="card">
+      <div class="row">
+        <label>Mes (YYYY-MM)</label>
+        <form method="get" action="/editor" class="row">
+          <input type="month" name="month" value="<%= ym %>" id="monthPickerEditor">
+          <button type="button" class="button" onclick="(function(){var i=document.getElementById('monthPickerEditor'); if(i && i.showPicker){i.showPicker()} else { i.focus(); i.click(); }})()">📅</button>
+          <button type="submit">Ver</button>
+        </form>
+      </div>
       <h2>Registro mensual <%= ym %></h2>
       <% if (unit.id === 4000) { %>
         <form method="post" action="/editor/save">
